--- a/Module-9/index.html
+++ b/Module-9/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>About Us</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylaesheet" href="css/styles.css">
 
 </head>
 <body>
@@ -15,14 +15,14 @@
     <div id="wrapper"></div>
     <script type="text/template" id="menu">
         <div class="keyboard">
-            <% keyboard.forEach(row => { %>
-                <div class=keyboard__row>
+            <% keyboard.row.forEach(row => { %>
+                <% let a = 0 %>
+                <div class=keyboard__row>                    
                     <% row.forEach (item => { %>
-                        <% let notesCount = 0; %>
-                        <button class="keyboard__btn" data-note="<%- obj.notes[notesCount] %>"><%- item %></button>
-                        <% notesCount++
-                        if(notesCount == 7)
-                        notesCount = 0 %>
+                        <button class="keyboard__btn" data-note="<%- keyboard.notes[a] %>"><%- item %></button>
+                        <% a++; %>
+                        <% if (a == 7){
+                        a = 0};%>
                     <% }); %>
                 </div>
             <% }); %>
