--- a/Module-9/index.html
+++ b/Module-9/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>About Us</title>
-    <link rel="stylaesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
@@ -42,5 +42,3 @@
     <script src="js/scripts.js"></script>
 </body>
 </html>
-
-
