--- a/Module-13/index.html
+++ b/Module-13/index.html
@@ -20,7 +20,7 @@
             <label for="last_name"></label>
           </div>
           <div class="tel">
-            <input placeholder="tel +xxx-xx-xx-xx-xxx" id="tel" type="text" class="validate" pattern="[0-9]{3}[0-9]{2}[0-9]{2}[0-9]{3}" required>
+            <input placeholder="tel +xxx-xx-xx-xx-xxx" id="tel" type="text" class="validate" pattern="[0-9]{10}" required>
             <label for="tel"></label>
           </div>
           <div class="submit">
